# algo2-taller2-listas

./: CMakeLists.txt  Dicc.h  README.md  lista.h  test_dicc.cpp  tests.cpp
